# remodian-cam

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix
.github/workflows/: docker-publish.yml
casing/: bottom.20260414-173714.FCBak  bottom.FCStd  connector.20260414-181719.FCBak  connector.FCStd  guard.20260414-193719.FCBak  guard.FCStd  top.20260414-181123.FCBak  top.FCStd
casing/mesh/: bottom-bottom.stl  connector-connector.stl  guard-guard.stl  top-Body.stl  top-Top.stl
core/client/: Cargo.toml
core/client/src/: lib.rs
core/control/: Cargo.toml
core/control/src/: api.rs  controller.rs  http_client.rs  lib.rs  main.rs  udp_client.rs  volume_fetcher.rs
core/vision/: API.md  Cargo.toml
core/vision/src/: lib.rs  main.rs
core/vision/src/detect/: calc.rs  mod.rs  sample.rs  template.rs
core/vision/src/preprocess/: homography.rs  mod.rs  pipeline.rs
dev/calibration-ui/: Cargo.toml
dev/calibration-ui/src/: app.rs  camera.rs  http_source.rs  main.rs  region.rs  view.rs  worker.rs
dev/calibration-ui/src/ui/: bottom_bar.rs  image_panel.rs  mod.rs  region_panel.rs  top_bar.rs
dev/vision-server/: Cargo.toml
dev/vision-server/src/: main.rs
firmware/cam-ir/: platformio.ini
firmware/cam-ir/src/: main.cpp
firmware/ir-blaster/: .gitignore  platformio.ini
firmware/ir-blaster/src/: main.cpp
firmware/remodian-firmware/: Cargo.toml
firmware/remodian-firmware/.cargo/: config.toml
firmware/remodian-firmware/src/: http.rs  lib.rs  rc5.rs  udp.rs
service/backend/: Cargo.toml  Dockerfile
service/backend/src/: main.rs
service/frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
service/frontend/dev-dist/: sw.js
service/frontend/public/: site.webmanifest
service/frontend/src/: App.tsx  api.ts  index.css
service/frontend/src/components/: power-control.tsx  slider-chart.tsx  volume-chart.tsx  volume-control.tsx  volume-slider.tsx
service/frontend/src/components/ui/: button.tsx
