[package]
name = "remodian-calibration-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.1"
remodian-vision = { path = "../../core/vision" }
image = "0.25"
nokhwa = { version = "0.10.10", features = ["input-native"] }
ureq = { version = "3.3.0", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
