[package]
edition      = "2024"
name         = "remodian-firmware"
rust-version = "1.88"
version      = "0.1.0"

[[bin]]
name = "remodian-firmware"
path = "./src/bin/main.rs"

[dependencies]
esp-hal = { version = "~1.0", features = ["esp32", "unstable"] }

esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32",
] }

esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32"] }

embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.6.1"
embedded-io-async = "0.6.1"
esp-alloc = "0.9.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "esp32",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }

critical-section = "1.2.0"
static_cell      = "2.1.1"
heapless = "0.8"
embassy-sync = "0.7.2"
picoserve = { version = "0.17.1", features = ["embassy", "defmt"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
defmt-rtt = "1.1.0"
defmt = "1.0.1"
esp-println = { version = "0.16.1", features = ["defmt-espflash", "esp32"] }
esp-backtrace = { version = "0.18.1", features = ["defmt", "esp32", "panic-handler"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"
debug = 2

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
