[package]
name = "remodian-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
clap = { version = "4", features = ["derive", "env"] }
tokio-stream = { version = "0.1", features = ["sync"] }
remodian-control = { path = "../../core/control" }
remodian-client = { path = "../../core/client" }
tower-http = { version = "0.6.8", features = ["cors"] }
